2007-06-02  Thiago Milczarek Sayão <thiago.sayao@gmail.com> 

	* msnp-sharp/SBMSGMessage.cs, msnp-sharp/NS11MessageHandler.cs,
	  msnp-sharp/SocketMessageProcessor.cs,
	  msnp-sharp/SB11MessageHandler.cs, msnp-sharp/P2PMessageSession.cs,
	  msnp-sharp/MSNSLPHandler.cs, msnp-sharp/P2PTransferSession.cs,
	  msnp-sharp/MSNSLPMessage.cs, msnp-sharp/P2PHandler.cs,
	  msnp-sharp/P2PMessage.cs: Changes to make Direct Connection work
	  (still not working)
	* msnp-sharp/StrKeyValuePair.cs, msnp-sharp/StrDictionary.cs:
	  Compatibility with Mono since Hashtable/Dictionary loop order is
	  not necessarely the Add order

2007-06-01 Thiago M. Sayão <thiago.sayao@gmail.com> 
	* Continue fixing direct connection (still doesn't work)

2007-05-27 Thiago M. Sayão <thiago.sayao@gmail.com> 
	* More code cleanup & move to generics
	* Added support for Multi-packet messages by Thijs Walcarius
	* Fixed bug on BLP by Thijs Walcarius
	* Fixed bug on Login by Thijs Walcarius

2007-05-23 Thiago M. Sayão <thiago.sayao@gmail.com> 
	* Add the SendPing command to keep the connection alive
	* Cleanup
	* Add the ability to send custom nicknames on messages 
	  (by Thijs Walcarius)

2007-05-16 Thiago M. Sayão <thiago.sayao@gmail.com> 
	* Fix some testing units
	* Fix serialization of contactlist and contact groups
	* Cleanup & small fixes

2007-05-10 Thiago M. Sayão <thiago.sayao@gmail.com> 
	* Fix bug on profile getting
	* Begin to fix p2p direct connect transfers

2007-05-01 Thiago M. Sayão <thiago.sayao@gmail.com> 
	* new Logo
	* Fix autotools

2007-04-06  Thiago M. Sayão <thiago.sayao@gmail.com> 
	* msnp-sharp/DisplayImage.cs: don't close the DataStream on RetieveImage ()

2007-04-04  Thiago M. Sayão <thiago.sayao@gmail.com> 
	* Fix display image transfer
	* Code cleanup	
	
2007-03-26  Thiago M. Sayão <thiago.sayao@gmail.com> 

	* msnp-sharp/PersistentStream.cs: Removed
	* msnp-sharp/NS11MessageHandler.cs: Fix bug when removing contacts