@@ -1,3 +1,12 @@
+2007-06-05  Thiago Milczarek Sayão <thiago.sayao@gmail.com> 
+
+	* msnp-sharp/NS11MessageHandler.cs: Default enconding? Let's try UTF8
+	  :)
+	* msnp-sharp/P2PDirectProcessor.cs, msnp-sharp/MSNSLPHandler.cs,
+	  msnp-sharp/P2PMessageSession.cs, msnp-sharp/MSNSLPMessage.cs,
+	  msnp-sharp/P2PHandler.cs, msnp-sharp/P2PMessage.cs: Fixing msn p2p
+	  direct connection
+
 2007-06-02  Thiago Milczarek Sayão <thiago.sayao@gmail.com> 
 
 	* msnp-sharp/SBMSGMessage.cs, msnp-sharp/NS11MessageHandler.cs,
